--- a/styles.css
+++ b/styles.css
@@ -1,215 +1,481 @@
-.poppins-thin {
-	font-family: "Poppins", sans-serif;
-	font-weight: 100;
-	font-style: normal;
-}
-
-.poppins-extralight {
-	font-family: "Poppins", sans-serif;
-	font-weight: 200;
-	font-style: normal;
-}
-
-.poppins-light {
-	font-family: "Poppins", sans-serif;
-	font-weight: 300;
-	font-style: normal;
-}
-
-.poppins-regular {
-	font-family: "Poppins", sans-serif;
-	font-weight: 400;
-	font-style: normal;
-}
-
-.poppins-medium {
-	font-family: "Poppins", sans-serif;
-	font-weight: 500;
-	font-style: normal;
-}
-
-.poppins-semibold {
-	font-family: "Poppins", sans-serif;
-	font-weight: 600;
-	font-style: normal;
-}
-
-.poppins-bold {
-	font-family: "Poppins", sans-serif;
-	font-weight: 700;
-	font-style: normal;
-}
-
-.poppins-extrabold {
-	font-family: "Poppins", sans-serif;
-	font-weight: 800;
-	font-style: normal;
-}
-
-.poppins-black {
-	font-family: "Poppins", sans-serif;
-	font-weight: 900;
-	font-style: normal;
-}
-
-.poppins-thin-italic {
-	font-family: "Poppins", sans-serif;
-	font-weight: 100;
-	font-style: italic;
-}
-
-.poppins-extralight-italic {
-	font-family: "Poppins", sans-serif;
-	font-weight: 200;
-	font-style: italic;
-}
-
-.poppins-light-italic {
-	font-family: "Poppins", sans-serif;
-	font-weight: 300;
-	font-style: italic;
-}
-
-.poppins-regular-italic {
-	font-family: "Poppins", sans-serif;
-	font-weight: 400;
-	font-style: italic;
-}
-
-.poppins-medium-italic {
-	font-family: "Poppins", sans-serif;
-	font-weight: 500;
-	font-style: italic;
-}
-
-.poppins-semibold-italic {
-	font-family: "Poppins", sans-serif;
-	font-weight: 600;
-	font-style: italic;
-}
-
-.poppins-bold-italic {
-	font-family: "Poppins", sans-serif;
-	font-weight: 700;
-	font-style: italic;
-}
-
-.poppins-extrabold-italic {
-	font-family: "Poppins", sans-serif;
-	font-weight: 800;
-	font-style: italic;
-}
-
-.poppins-black-italic {
-	font-family: "Poppins", sans-serif;
-	font-weight: 900;
-	font-style: italic;
-}
-
 :root {
-	--orange: #f16722;
-	--white: #ffffff;
-	--black: #000000;
-	--light-black: #0d0600;
+  --orange: #f16722;
+    --white: #ffffff;
+    --black: #000000;
+    --light-black: #0d0600;
 }
 
 * {
-	border: 0;
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: "Poppins", sans-serif;
-	color: var(--light-black);
-	font-weight: 400;
+  border: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    color: var(--light-black);
+    font-weight: 400;
 }
 
 html,
 body {
-	background-color: #ebebeb;
+  background-color: #ebebeb;
 }
 
 .d-flex {
-	display: flex;
+  display: flex;
 }
 
 .jc-sb {
-	justify-content: space-between;
+  justify-content: space-between;
 }
 
+.fdc {
+  flex-direction: column;
+}
+
+.orange-text {
+  color: var(--orange);
+}
+
+.container {
+  max-width: 1320px;
+  margin: 0 auto;
+}
+
+.btn {
+  border-radius: 32px;
+  height: 48px;
+  padding: 12px 20px;
+  color: var(--white);
+  background-color: var(--orange);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  font-size: 16px;
+  text-decoration: none;
+  width: fit-content;
+  letter-spacing: 0.01em;
+}
 header {
-	border-radius: 20px;
-	background-color: var(--white);
-	height: 56px;
-	padding: 0 24px;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	margin: 16px;
-	z-index: 11;
-	position: relative;
+  border-radius: 20px;
+    background-color: var(--white);
+    height: 56px;
+    padding: 0 24px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 16px;
+    z-index: 11;
+    position: relative;
 }
 
 header .d-flex {
-	width: 100%;
-	align-items: center;
+  width: 100%;
+    align-items: center;
 }
 
 header ul {
-	display: flex;
-	align-items: center;
-	gap: 24px;
-	list-style: none;
+  display: flex;
+    align-items: center;
+    gap: 24px;
+    list-style: none;
 }
 
 header ul li,
 header ul li a {
-	font-size: 14px;
-	line-height: 1;
-	color: var(--black);
-	text-decoration: none;
+  font-size: 16px;
+    line-height: 1;
+    color: var(--black);
+    text-decoration: none;
 }
 
 header ul li.active a,
 header ul li:hover a {
-	font-weight: 500;
-	color: var(--orange);
+  font-weight: 500;
+    color: var(--orange);
 }
 
 img {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+    height: auto;
 }
 
 header .left-container {
-	max-width: 40px;
+  max-width: 40px;
 }
 
 .hero-banner {
-	height: 500px;
-	margin-top: -92px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background: url("assets/hero-bnr.png");
-	background-size: cover;
-	background-repeat: no-repeat;
+  height: 500px;
+    margin-top: -92px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: url("assets/hero-bnr.png");
+  background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 .hero-banner .title {
-	margin-top: 92px;
+  margin-top: 92px;
 }
 
 .hero-banner .title h1 {
-	max-width: 100%;
-	margin: 0 auto;
-	color: var(--orange);
-	font-weight: 500;
-	text-align: center;
-	font-size: 48px;
-	line-height: 56px;
+  max-width: 100%;
+    margin: 0 auto;
+    color: var(--orange);
+    font-weight: 500;
+    text-align: center;
+    font-size: 48px;
+    line-height: 56px;
 }
 
 .hero-banner .title h1 .white {
-	color: var(--white);
-	display: block;
+  color: var(--white);
+    display: block;
+}
+
+footer {
+  min-height: 400px;
+  background-image: url('assets/footer-bg.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  display: flex;
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+}
+
+.col-2 {
+  width: 16.66%;
+  max-width: 16.66%;
+  flex: 1 1 16.66%;
+}
+
+.col-3 {
+  width: 25%;
+  max-width: 25%;
+  flex: 1 1 25%;
+}
+
+.col-4 {
+  width: 33.33%;
+  max-width: 33.33%;
+  flex: 1 1 33.33%;
+}
+
+.brand-section img {
+  max-width: 100px;
+}
+
+.brand-section .row.fdc {
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.brand-section .icons-ctr ul {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  list-style: none;
+}
+
+.brand-section .icons-ctr ul li a {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.brand-section .icons-ctr ul li img {
+  max-width: 24px;
+}
+
+footer .row {
+  align-items: flex-start;
+}
+
+footer .heading {
+  font-size: 22px;
+  font-weight: 700;
+  color: var(--white);
+  margin-bottom: 16px;
+}
+
+footer .col-3 ul {
+  list-style: none;
+}
+
+footer .col-3 ul li,
+footer .col-3 ul li a {
+  font-size: 16px;
+  margin-bottom: 8px;
+  color: var(--white);
+  font-weight: 400;
+  text-decoration: none;
+  line-height: 26px;
+}
+
+footer .content {
+  min-height: 230px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+footer .content p {
+  font-size: 16px;
+  margin-bottom: 16px;
+  color: var(--white);
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.cta-section {
+  margin-top: 128px;
+  margin-bottom: 64px;
+}
+
+.cta-section .section-wrapper {
+  border-radius: 24px;
+  background-image: url('assets/see-work-bg.png');
+  background-size: 100% 100%;
+  padding: 32px;
+  background-color: var(--white);
+  min-height: 360px;
+  display: flex;
+  align-items: center;
+}
+
+.cta-section .section-wrapper .row {
+  gap: 24px;
+}
+
+.cta-section .section-wrapper .title {
+  font-size: 32px;
+  color: var(--white);
+  font-weight: 700;
+}
+
+.cta-section .section-wrapper .desc {
+  font-size: 16px;
+  max-width: 65%;
+  margin: auto;
+  color: var(--white);
+  line-height: 26px;
+  text-align: center;
+}
+
+.services-section {
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
+.services-section .title,
+.reiviews-section .title,
+.about-section .title {
+  text-align: center;
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 500;
+}
+
+.services-section .divider,
+.reiviews-section .divider,
+.about-section .divider {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 16px;
+}
+
+.services-section .black-line,
+.reiviews-section .black-line,
+.about-section .black-line {
+  width: 120px;
+  height: 1px;
+  background-color: var(--light-black);
+}
+
+.services-section .orange-line,
+.reiviews-section .orange-line,
+.about-section .orange-line {
+  width: 120px;
+  height: 1px;
+  background-color: var(--orange);
+}
+
+.cards-section .row {
+  gap: 64px;
+  justify-content: center;
+  margin: 64px 0;
+}
+
+.cards-section .card {
+  min-height: 450px;
+  border-radius: 24px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  width: 33.33%;
+  display: flex;
+  flex-direction: column;
+}
+
+.cards-section .card .top-section {
+  max-height: 250px;
+}
+
+.cards-section .card .top-section img {
+  width: 100%;
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
+  max-height: 250px;
+}
+
+.cards-section .card .bottom-section {
+  padding: 16px;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.cards-section .card .title {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 32px;
+  margin: 0 0 8px;
+}
+
+.cards-section .card .desc {
+  max-width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 14px;
+  line-height: 21px;
+  color: var(--light-black);
+  font-weight: 300;
+}
+
+.about-section .title-section {
+  margin-bottom: 64px;
+}
+
+.about-section .about {
+  gap: 64px;
+}
+
+.about-section .img-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-section .img-section img {
+  max-width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-section .content {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  justify-content: center;
+}
+
+.about-section .content p {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+  color: var(--light-black);
+}
+
+.about-section .col-6 {
+  width: 50%;
+  max-width: 50%;
+  flex: 1 1 50%;
+}
+
+.about-section .team-pic img {
+  width: 100%;
+  border-radius: 24px;
+  display: block;
+  margin-top: 64px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.portfolio-section {
+  background-color: var(--orange);
+  padding: 24px;
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
+.portfolio-section .title {
+  color: var(--white);
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1;
+}
+
+.portfolio-section .desc {
+  color: var(--white);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1;
+}
+
+.slick-section {
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
+.review-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 280px;
+  background-color: var(--white);
+  border-radius: 24px;
+  padding: 24px;
+  margin: 0 16px;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.user-info img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 4px solid var(--orange);
+}
+
+.user-info .user-name {
+  font-size: 24px;
+  font-weight: bold;
+  color: var(--orange);
+}
+
+.review-description {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 400;
+  color: var(--light-black);
+  margin-top: 24px;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.slick-dots {
+  bottom: -48px;
 }
